removed console messages and fixed wallet alignment issue

--- a/src/app/pages/wallet/wallet.component.scss
+++ b/src/app/pages/wallet/wallet.component.scss
@@ -8,13 +8,15 @@
     background-color: white;
 }
 .custom-tab{
-    width: 240px;
+    width: 100%;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin-bottom: 2rem;
     border-right: 4px solid transparent;
     padding:1.4rem 1rem;
     opacity: .5;
+    text-align: center;
+    margin:auto
 }
 .activeTab{
     border-right: 4px solid #a63da1;
@@ -45,5 +47,14 @@ hr{
 @media only screen and (min-device-width: 768px){
     .page-container{
         padding: 1.5rem 4rem;
+    }
+    .custom-tab{
+        width: 240px;
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        margin-bottom: 2rem;
+        border-right: 4px solid transparent;
+        padding:1.4rem 1rem;
+        opacity: .5;
     }
 }
